fix: header height on mobile

--- a/src/styles/sections/_header.scss
+++ b/src/styles/sections/_header.scss
@@ -95,6 +95,7 @@
       align-items: center;
 
       inline-size: 100%;
+      block-size: 100vh;
 
       background-color: var(--color-static-white);
 
